--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,17 @@
             android:layout_centerHorizontal="true"
             android:textColor="@android:color/holo_blue_bright"
             android:onClick="nextClick" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Restart"
+            android:id="@+id/button4"
+            android:layout_alignBottom="@+id/button2"
+            android:layout_centerHorizontal="true"
+            android:textColor="@android:color/holo_blue_light"
+            android:visibility="invisible"
+            android:onClick="restartClick" />
     </RelativeLayout>
 
     <TextView
